--- a/2.0index.html
+++ b/2.0index.html
@@ -9,7 +9,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Quizzly</title>
+    <title>Quiz Fight</title>
 </head>
 <body>
     <header>
@@ -50,7 +50,12 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <a href="index.html" class="footer__link"><img src="images/icon-home.svg" alt=""></a>
+        <a href="bookmarks.html" class="footer__link active"><img src="images/icon-marked-nav.svg" alt=""></a>
+        <a href="insert.html" class="footer__link"><img src="images/icon-edit.svg" alt=""></a>
+        <a href="profile.html" class="footer__link"><img src="images/icon-profile.svg" alt=""></a>
+    </footer>
     <script>
         function toggleAnswer(clicked_id) {
             let text;
