--- a/2.0index.html
+++ b/2.0index.html
@@ -17,6 +17,7 @@
     </header>
     <main class="main">
         <section class="card">
+            <div class="bookmark"></div>
             <img src="images/icon-marked.svg" alt="" class="card__img">
             <h2 class="card-headline">Wer ist der beste Harry Potter Carakter?</h2>
             <button class="card__btn" onclick="toggleAnswer(this.id)" id="button-1">Antwort</button>
@@ -28,6 +29,7 @@
             </ul>
         </section>
         <section class="card">
+            <div class="bookmark"></div>
             <img src="images/icon-marked.svg" alt="" class="card__img">
             <h2 class="card-headline">Wer ist genau so witzig wie ich?</h2>
             <button class="card__btn" onclick="toggleAnswer(this.id)" id="button-2">Antwort</button>
@@ -39,6 +41,7 @@
             </ul>
         </section>
         <section class="card">
+            <div class="bookmark"></div>
             <img src="images/icon-marked.svg" alt="" class="card__img">
             <h2 class="card-headline">Welcher Ort ist der schönste im Westerwald?</h2>
             <button class="card__btn" onclick="toggleAnswer(this.id)" id="button-3">Antwort</button>
@@ -51,10 +54,10 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="index.html" class="footer__link"><img src="images/icon-home.svg" alt=""></a>
-        <a href="bookmarks.html" class="footer__link active"><img src="images/icon-marked-nav.svg" alt=""></a>
-        <a href="insert.html" class="footer__link"><img src="images/icon-edit.svg" alt=""></a>
-        <a href="profile.html" class="footer__link"><img src="images/icon-profile.svg" alt=""></a>
+        <a href="" class="footer__link"><img src="icons/home-variant.svg" alt=""></a>
+        <a href="" class="footer__link active"><img src="icons/bookmark.svg" alt=""></a>
+        <a href="" class="footer__link"><img src="icons/pencil.svg" alt=""></a>
+        <a href="" class="footer__link"><img src="icons/account.svg" alt=""></a>
     </footer>
     <script>
         function toggleAnswer(clicked_id) {
@@ -69,9 +72,7 @@
             }
         }
 
-        let markedQuestions = [];
-        markedQuestions.push({'01': 'Fabian Hanso'},{'02': 'Der Meister'});
-        console.log(markedQuestions);
+
     </script>
 </body>
 </html>
