add some js stuff

--- a/2.0index.html
+++ b/2.0index.html
@@ -57,10 +57,10 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="" id="home-button" class="footer__link"><img src="icons/home-variant.svg" alt=""></a>
-        <a href="" id= "bookmark-button" class="footer__link active"><img src="icons/bookmark.svg" alt=""></a>
-        <a href="" id="pencil-button" class="footer__link"><img src="icons/pencil.svg" alt=""></a>
-        <a href="" id="account-button" class="footer__link"><img src="icons/account.svg" alt=""></a>
+        <a href="2.0index.html" class="footer__link"><img src="icons/home-variant.svg" alt=""></a>
+        <a href="bookmarks.html" class="footer__link active"><img src="icons/bookmark.svg" alt=""></a>
+        <a href="pencil.html" class="footer__link"><img src="icons/pencil.svg" alt=""></a>
+        <a href="2.0index.html" class="footer__link"><img src="icons/account.svg" alt=""></a>
     </footer>
     <script>
         function toggleAnswer(clicked_id) {
@@ -75,9 +75,8 @@
             }
         }
 
-        alertOnHome();
 
 
     </script>
 </body>
-</html>
+</html
