--- a/answer.html
+++ b/answer.html
@@ -10,9 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Quizzly</title>
+    <title>Quiz Fight</title>
 </head>
-
+<h1>Quiz Fight</h1>
 <body>
     <header>
         <img src="images/logo.svg" alt="Quizzly" class="header__img">
@@ -50,10 +50,10 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="index.html" class="footer__link"><img src="images/icon-home.svg" alt=""></a>
-        <a href="bookmarks.html" class="footer__link"><img src="images/icon-marked-nav.svg" alt=""></a>
-        <a href="insert.html" class="footer__link"><img src="images/icon-edit.svg" alt=""></a>
-        <a href="profile.html" class="footer__link active"><img src="images/icon-profile.svg" alt=""></a>
+        <a href="2.0index.html" class="footer__link"><img src="icons/home-variant.svg" alt=""></a>
+        <a href="bookmarks.html" class="footer__link"><img src="icons/bookmark.svg" alt=""></a>
+        <a href="pencil.html" class="footer__link"><img src="icons/pencil.svg" alt=""></a>
+        <a href="pencil.html" class="footer__link active"><img src="icons/account.svg" alt=""></a>
     </footer>
 </body>
 
