--- a/bookmarks.html
+++ b/bookmarks.html
@@ -10,32 +10,30 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Quizzly</title>
+    <title>Quiz Fight</title>
 </head>
-
+<header>
+<h1>Quiz Fight</h1>
+</header>
 <body>
-    <header>
-        <img src="images/logo.svg" alt="Quizzly" class="header__img">
-    </header>
+
     <main class="main">
         <section class="card">
-            <img src="images/icon-marked-filled.svg" alt="Marker Icon" class="card__img">
-            <h2 class="card-headline">Wie lautet die Antwort auf die Frage des Lebens?</h2>
+            <h2 class="card-headline">Welcher ist der schönste Ort im Westerwald?</h2>
             <button class="card__btn" onclick="toggleAnswer(this.id)" id="button-1">Antwort</button>
-            <p class="hiddenText card__text" id="hidden-text-1">42 wäre hier die richtige Antwort!</p>
+            <p class="hiddenText card__text" id="hidden-text-1">Aber sowas von Oberelbert</p>
             <ul class="badges">
                 <li class="badges__items"><span class="badges__items__dot primary-color"></span>Leben</li>
                 <li class="badges__items"><span class="badges__items__dot secondary-color"></span>Wissen</li>
                 <li class="badges__items"><span class="badges__items__dot third-color"></span>Top10</li>
-                <li class="badges__items"><span class="badges__items__dot fourth-color"></span>Filme</li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="index.html" class="footer__link"><img src="images/icon-home.svg" alt=""></a>
-        <a href="bookmarks.html" class="footer__link active"><img src="images/icon-marked-nav.svg" alt=""></a>
-        <a href="insert.html" class="footer__link"><img src="images/icon-edit.svg" alt=""></a>
-        <a href="profile.html" class="footer__link"><img src="images/icon-profile.svg" alt=""></a>
+        <a href="2.0index.html" class="footer__link"><img src="icons/home-variant.svg" alt=""></a>
+        <a href="bookmarks.html" class="footer__link active"><img src="icons/bookmark.svg" alt=""></a>
+        <a href="pencil.html" class="footer__link"><img src="icons/pencil.svg" alt=""></a>
+        <a href="2.0index.html" class="footer__link"><img src="icons/account.svg" alt=""></a>
     </footer>
     <script>
         function toggleAnswer(clicked_id) {
